force-app/main/default/objects/License_Event__c/License_Event__c.object-meta.xml
<CustomObject>
    <description>Stripe / LMA event log (idempotent).</description>
    <label>License Event</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>License Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>