force-app/main/default/objects/License_Event__c/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <label>Payload JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>