force-app/main/default/objects/License_Event__c/fields/Stripe_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Event Id</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>